--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "a.js",
   "dependencies": {},
   "devDependencies": {
-    "cz-conventional-changelog": "^2.1.0"
+    "cz-customizable": "^5.3.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/Jibacat/testgit#readme",
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "node_modules/cz-customizable"
     }
   }
 }
