--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "a.js",
   "dependencies": {},
   "devDependencies": {
+    "commitizen": "^3.0.5",
     "cz-customizable": "^5.3.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "commit": "git-cz"
   },
   "repository": {
     "type": "git",
